Release CMTK-1.3.1:

- Fixed: when using an unknown image file format suffix, CMTK would state that
    it would write a RAW3D file instead, but then write nothing. This now
    defaults to single-file NIFTI, which is actually written (Issue #4852).
- Refactored: consolidated affine initialization of groupwise registration
    functionals to reduce code duplication and thus avoid residual unfixed
    bugs.
- Improved: when initializing groupwise registrations, translations are now
    computed with a zero sum over all images. Previously, we aligned all
    centers with the template FOV center, but there is no reason why this
    would be a good idea when using, for example, centers of mass of the input
    images.
- Added: groupwise registration tools now abort with an error when at least
    one of the input images get transformed too far outside the FOV. This is
    detected in cmtk::CongealingFunctionalBase and defaults to requiring at
    least 1% of reformatted pixels to be inside the FOV of every image. At
    present, this is not configurable at run time.
- Removed: support for writing joint histograms.
- Refactored: value ranges are now handled by Types::Range<T> class
    template. The specialization typedef'ed as Types::DataItemRange is now
    used for more intuitive handling of item ranges.
- Fixed: selection of floating image interpolation method was implemented in
    warpx tool, but not exposed at the command line.
- Fixed: auto-cropping by threshold was implemented in image pair registration
    preprocessor class, but not exposed through the command line interface.
- Added: padding in convertx tool can now be turned on and off multiple times
    during the sequence of operations, including the use of different padding
    values at different times.
- Added: connected components operator; also added this as a function to
    convertx tool.
- Configuration/build: when system zlib is installed, we use it instead of the